# FomfoClaw

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
libs/: CMakeLists.txt
libs/Constants/: CMakeLists.txt
libs/Constants/include/Constants/: SfmlConstants.hpp
libs/GameObjects/: CMakeLists.txt
libs/GameObjects/include/GameObjects/: Claw.hpp
libs/GameObjects/src/: Claw.cpp
libs/Shapes/: CMakeLists.txt
libs/Shapes/include/Shapes/: Circle.hpp  Polygon.hpp  Rect.hpp  Shape.hpp
libs/Shapes/src/: Circle.cpp  Polygon.cpp  Rect.cpp  Shape.cpp
